--- a/starter_pack/index.html
+++ b/starter_pack/index.html
@@ -305,20 +305,20 @@
             <h2 class="question-index">Question 1 of 10</h2>
             <h5 class="question-text">question 5</h5>
             <div>
-              <input class="correct-answer" type="radio" disabled name="answer" value="true" checked>
+              <input type="radio" disabled class="quiz-review" name="answer" value="true">
               <label for="html">option1</label>
-              <label class="label-aws-checked" for="html">Correct answer</label>
+              <!-- <label class="label-aws-checked" for="html">Correct answer</label> -->
             </div>
             <div>
-              <input type="radio" disabled name="answer" value="false">
+              <input type="radio" class="quiz-review" disabled class="quiz-review" name="answer" value="false">
               <label for="html">option2</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer" value="false">
+              <input type="radio" class="quiz-review" disabled class="quiz-review" name="answer" value="false">
               <label for="html">option3</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer" value="false">
               <label for="html">option4</label>
             </div>
           </div>
@@ -326,21 +326,21 @@
             <h2 class="question-index">Question 2 of 10</h2>
             <h5 class="question-text">question 5</h5>
             <div>
-              <input type="radio" disabled name="answer2" value="true" class="option-correct">
+              <input type="radio" disabled class="quiz-review" name="answer2" value="true">
               <label for="html">option1</label>
-              <label class="label-aws-checked" for="html">Correct answer</label>
+              <!-- <label class="label-aws-checked" for="html">Correct answer</label> -->
             </div>
             <div>
-              <input type="radio" disabled name="answer2" value="false" class="wrong-answer" checked>
+              <input type="radio" disabled class="quiz-review" name="answer2" value="false">
               <label for="html">option2</label>
-              <label class="label-aws-checked" for="html">Your answer</label>
+              <!-- <label class="label-aws-checked" for="html">Your answer</label> -->
             </div>
             <div>
-              <input type="radio" disabled name="answer2" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer2" value="false">
               <label for="html">option3</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer2" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer2" value="false">
               <label for="html">option4</label>
             </div>
           </div>
@@ -348,19 +348,19 @@
             <h2 class="question-index">Question 3 of 10</h2>
             <h5 class="question-text">question 5</h5>
             <div>
-              <input type="radio" disabled name="answer3" value="true">
+              <input type="radio" disabled class="quiz-review" name="answer3" value="true">
               <label for="html">option1</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer3" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer3" value="false">
               <label for="html">option2</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer3" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer3" value="false">
               <label for="html">option3</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer3" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer3" value="false">
               <label for="html">option4</label>
             </div>
           </div>
@@ -368,19 +368,19 @@
             <h2 class="question-index">Question 4 of 10</h2>
             <h5 class="question-text">question 5</h5>
             <div>
-              <input type="radio" disabled name="answer4" value="true">
+              <input type="radio" disabled class="quiz-review" name="answer4" value="true">
               <label for="html">option1</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer4" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer4" value="false">
               <label for="html">option2</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer4" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer4" value="false">
               <label for="html">option3</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer4" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer4" value="false">
               <label for="html">option4</label>
             </div>
           </div>
@@ -388,19 +388,19 @@
             <h2 class="question-index">Question 5 of 10</h2>
             <h5 class="question-text">question 5</h5>
             <div>
-              <input type="radio" disabled name="answer5" value="true">
+              <input type="radio" disabled class="quiz-review" name="answer5" value="true">
               <label for="html">option1</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer5" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer5" value="false">
               <label for="html">option2</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer5" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer5" value="false">
               <label for="html">option3</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer5" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer5" value="false">
               <label for="html">option4</label>
             </div>
           </div>
@@ -408,19 +408,19 @@
             <h2 class="question-index">Question 6 of 10</h2>
             <h5 class="question-text">question 5</h5>
             <div>
-              <input type="radio" disabled name="answer6" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer6" value="false">
               <label for="html">option1</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer6" value="true">
+              <input type="radio" disabled class="quiz-review" name="answer6" value="true">
               <label for="html">option2</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer6" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer6" value="false">
               <label for="html">option3</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer6" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer6" value="false">
               <label for="html">option4</label>
             </div>
           </div>
@@ -428,19 +428,19 @@
             <h2 class="question-index">Question 7 of 10</h2>
             <h5 class="question-text">question 5</h5>
             <div>
-              <input type="radio" disabled name="answer7" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer7" value="false">
               <label for="html">option1</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer7" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer7" value="false">
               <label for="html">option2</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer7" value="true">
+              <input type="radio" disabled class="quiz-review" name="answer7" value="true">
               <label for="html">option3</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer7" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer7" value="false">
               <label for="html">option4</label>
             </div>
           </div>
@@ -448,19 +448,19 @@
             <h2 class="question-index">Question 8 of 10</h2>
             <h5 class="question-text">question 5</h5>
             <div>
-              <input type="radio" disabled name="answer8" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer8" value="false">
               <label for="html">option1</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer8" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer8" value="false">
               <label for="html">option2</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer8" value="true">
+              <input type="radio" disabled class="quiz-review" name="answer8" value="true">
               <label for="html">option3</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer8" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer8" value="false">
               <label for="html">option4</label>
             </div>
           </div>
@@ -468,19 +468,19 @@
             <h2 class="question-index">Question 9 of 10</h2>
             <h5 class="question-text">question 5</h5>
             <div>
-              <input type="radio" disabled name="answer9" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer9" value="false">
               <label for="html">option1</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer9" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer9" value="false">
               <label for="html">option2</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer9" value="true">
+              <input type="radio" disabled class="quiz-review" name="answer9" value="true">
               <label for="html">option3</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer9" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer9" value="false">
               <label for="html">option4</label>
             </div>
           </div>
@@ -488,26 +488,26 @@
             <h2 class="question-index">Question 10 of 10</h2>
             <h5 class="question-text">question 5</h5>
             <div>
-              <input type="radio" disabled name="answer10" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer10" value="false">
               <label for="html">option1</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer10" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer10" value="false">
               <label for="html">option2</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer10" value="false">
+              <input type="radio" disabled class="quiz-review" name="answer10" value="false">
               <label for="html">option3</label>
             </div>
             <div>
-              <input type="radio" disabled name="answer10" value="true">
+              <input type="radio" disabled class="quiz-review" name="answer10" value="true">
               <label for="html">option4</label>
             </div>
           </div>
           <div id="box-result">
             <h2>Result:</h2>
-            <h4>1/10</h4>
-            <h5>10%</h5>
+            <h4></h4>
+            <h5></h5>
             <p>Practice more to improve it :D</p>
             <button id="btn-try-again"><span>Try again</button>
           </div>
